--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <input type="password" placeholder="Ведите пороль" />
       <button>Отправь даные</button>
     </form>
-
+    <input type="text" placeholder="Добавили изменения" />
     <script src="./js/main.js"></script>
   </body>
 </html>
